# sudoku

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
.github/: renovate.json
.github/workflows/: codeql-analysis.yml  continuous-integration.yml
data/: easy.csv  hard.csv  medium.csv  super_easy.csv  super_hard.csv
nandoku/: __main__.py
sudoku/: __main__.py
